--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-router-dom": "^5.3.3",
     "date-fns": "^3.3.1",
     "lucide-react": "^0.344.0",
+    "nanoid": "^5.0.9",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^18.3.1",
