--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nanoid": "^5.0.9",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.0.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.1"
   },
